--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:screenOrientation="portrait">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDw-12cB2f_-5hnmD4FSIeO82B-FZUaUA8" />
@@ -22,6 +23,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login">
+            android:screenOrientation="portrait"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,6 +32,7 @@
         </activity>
         <activity
             android:name=".MapsActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_maps"></activity>
         <!--
  ATTENTION: This was auto-generated to add Google Play services to your project for
