--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,7 +85,9 @@
             android:label="@string/title_activity_trails" />
         <activity
             android:name=".TrailActivity"
-            android:label="@string/title_activity_trail"></activity>
+            android:label="@string/title_activity_trail" />
+        <activity android:name=".AccountActivity" />
+        <activity android:name=".TrailHistoryActivity"></activity>
     </application>
 
 </manifest>
