--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,22 +36,16 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-
-        <activity
-            android:name=".splashActivity">
+        <activity android:name=".splashActivity">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login">
-
-        </activity>
+            android:label="@string/title_activity_login"></activity>
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
@@ -96,22 +90,19 @@
             android:name=".Trails.TrailActivity"
             android:label="@string/title_activity_trail" />
         <activity android:name=".Trails.TrailHistoryActivity" />
-
-
         <activity android:name=".ActivityActivity" />
         android:name=".TrailActivity"
         android:label="@string/title_activity_trail" />
         <activity
             android:name=".FitnessActivity"
             android:label="@string/title_activity_fitness" />
-        <activity android:name=".ProfileActivity"></activity>
-
-
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".ActivityActivity" />
         android:name=".TrailActivity"
         android:label="@string/title_activity_trail" />
-
-
+        <activity
+            android:name=".Trails.HistoryActivity"
+            android:label="@string/title_activity_history"></activity>
     </application>
 
 </manifest>
